# compiloor

./: .gitignore  README.md  pyproject.toml  requirements.txt
compiloor/: main.py
compiloor/constants/: environment.py  logger.py  report.py  utils.py
compiloor/services/: __init__.py
compiloor/services/cli/: cli.py
compiloor/services/environment/: setup.py  utils.py
compiloor/services/logger/: logger.py
compiloor/services/parser/: chromium.py  finding.py  indexing.py  legend.py  markdown.py  table.py  utils.py
compiloor/services/typings/: config.py  finding.py
compiloor/services/utils/: config.py  utils.py
