[tool.poetry]
name = "compiloor"
version = "0.1.3"
description = ""
authors = ["Kristian Apostolov <kristianapostolovcontacts@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
compiloor = "compiloor.services.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
brotli = "1.1.0"
build = "0.10.0"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.0"
cleo = "2.0.1"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "41.0.4"
cssselect2 = "0.7.0"
defusedxml = "0.7.1"
distlib = "0.3.7"
docopt = "0.6.2"
dulwich = "0.21.6"
filelock = "3.13.0"
fonttools = "4.43.0"
greenlet = "2.0.2"
h11 = "0.14.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.8.0"
install = "1.3.5"
installer = "0.7.0"
jaraco-classes = "3.3.0"
jsonschema = "4.17.3"
keyring = "24.2.0"
markdown = "3.4.4"
markdown-it-py = "3.0.0"
markdown2 = "2.4.10"
mdurl = "0.1.2"
mistune = "3.0.2"
more-itertools = "10.1.0"
msgpack = "1.0.7"
outcome = "1.2.0"
packaging = "23.2"
pexpect = "4.8.0"
pillow = "10.0.1"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
playwright = "1.38.0"
poetry = "1.6.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydyf = "0.8.0"
pyee = "9.0.4"
pygments = "2.16.1"
pymdown-extensions = "10.3"
pymupdf = "1.23.4"
pymupdfb = "1.23.3"
pyphen = "0.14.0"
pyproject-hooks = "1.0.0"
pyrsistent = "0.20.0"
pysocks = "1.7.1"
pyyaml = "6.0.1"
rapidfuzz = "2.15.2"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.6.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
svgwrite = "1.4.3"
tabulate = "0.9.0"
tinycss2 = "1.2.1"
tomlkit = "0.12.1"
trio = "0.22.2"
trio-websocket = "0.11.1"
trove-classifiers = "2023.10.18"
typer = "0.9.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.6"
virtualenv = "20.24.6"
wavedrom = "2.0.3.post3"
weasyprint = "60.1"
webencodings = "0.5.1"
wsproto = "1.2.0"
xattr = "0.10.1"
zipp = "3.17.0"
zopfli = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"